# goit-pythonweb-hw-012

./: .coverage  .coverage.unit  .coveragerc  .env.test  .gitignore  Dockerfile  Dockerfile.test  Makefile  README.md  alembic.ini  copy.py  coverage.xml  docker-compose.test.yaml  project-structure.txt  pyproject.toml  pytest.ini  test.db
docs/: conf.py  database.rst  index.rst  schemas.rst
migrations/: env.py
migrations/versions/: 1c24784c8a30_add_roles_to_users_remove_from_contacts.py  362ab3900083_initial_schema.py  63df03ae21f8_initial_schema.py
scripts/: init_db.py  run_tests.sh
src/: main.py  pytest.ini
src/database/: connect.py  db.py  metadata.py  models.py
src/repository/: contacts.py  users.py
src/routers/: contacts.py  users.py  utils.py
src/schemas/: schemas.py
src/services/: auth.py  base.py  cloudinary_config.py  email.py  get_upload.py  roles.py
tests/: conftest.py  factories.py  test_auth_service.py  test_contacts_routes.py  test_database_connect.py  test_email_service.py  test_users_repository.py
tests/integration/: conftest.py  test_auth.py  test_auth_integr.py  test_auth_service.py  test_contacts.py  test_contacts_integr.py  test_db.py  test_email.py  test_healthchecker.py  test_models_and_repositories.py  test_password_reset.py  test_repository_users.py  test_roles.py  test_services.py  test_users.py  test_utils.py
tests/unit/: .test_contacts_routes.py  conftest.py  test_auth.py  test_auth_service.py  test_cloudinary.py  test_contacts_repository.py  test_roles.py  test_schemas.py  test_services.py  test_simple_math.py
tests/units/: test_contacts_users.py  test_contacts_utils.py  test_database_connect.py  (+2 more)
(+40 files in other folders)
